k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sec-latent
  labels:
    name: sec-latent
    environment: base
